[metadata]
name = secpo
description = secpo: Security and portability testing framework using VMs and Docker
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://docs.pytest.org/en/latest/
author = Martin Vasko
license = MIT
; license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = security testing, portability testing, virtualization
; project_urls =
;     Source=https://github.com/pytest-dev/pytest
;     Tracker=https://github.com/pytest-dev/pytest/issues

[options]
packages =
    secpo
python_requires = >=3.5
package_dir =
    =src
setup_requires =
    setuptools>=40.0
    setuptools-scm
zip_safe = no

[options.entry_points]
console_scripts =
    secpo=run_facade:console_main

[options.extras_require]
checkqa-mypy =
    mypy==0.780
testing =
    argcomplete
    hypothesis>=3.56
    mock
    nose
    requests
    xmlschema

